--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=workshop-mongodb
+spring.data.mongodb.uri=mongodb://admin:password123@localhost:27017/workshop_db?authSource=admin
